Fix spacing

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,7 +25,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- main.container {
+main.container {
    display: flex; 
    flex-direction: column;
    align-items: center;
@@ -33,20 +33,19 @@ body {
    margin: auto;
  }
 
- #error-msg {
+#error-msg {
    display: flex;
    color: red;
    width: 100%;
    justify-content: space-around;
-   font-weight: 700;
    border: 4px solid red;
    margin-top: 1em;
- }
-
- #error-text {
-   margin: 0.5em;
+  }
+  
+#error-text {
+  margin: 0.5em;
  }
 
  #error-msg span {
-   margin: auto;
+  margin: auto;
  }
